# inkforge

./: .env.example  .gitignore  CODEBUDDY.md  Cargo.toml  Dockerfile  INTEGRATION_TEST_CHECKLIST.md  PROFILE_FORMS_TEST_CHECKLIST.md  PROMPT_FOR_STAGE6A_COMPLETION.md  README.md  TASK_11_RESPONSIVE_LAYOUT_SUMMARY.md  TASK_12_FINAL_INTEGRATION_SUMMARY.md  TASK_3_SUMMARY.md  TASK_3_TEST_REPORT.md  TASK_6_7_8_SUMMARY.md  TASK_6_7_8_VERIFICATION.md  cargo_check_output.txt  docker-compose.yml  fix_real.py  inkforge.db.backup  inkforge.db.bak  inkforge.db.restore  package-lock.json  package.json  test-design-system-compliance.js  test-login-i18n.js  test-login-responsive.js  test-login-visual.js  test-responsive-layout.js  test_backup_api.ps1
.claude/: settings.local.json
.github/workflows/: ci.yml
.kiro/specs/admin-routing-consistency-fix/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/editorial-profile-login-redesign/: .config.kiro  TEST_SUMMARY.md  design.md  requirements.md  tasks.md
analyze/: analyze.md
config/: default.toml  litestream.yml  local.toml
docker/: entrypoint.sh
docs/: ICON_GUIDE.md  PHASE_3A_COMPLETION.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/playwright-report/: index.html
e2e/scripts/: webServer.cjs
e2e/test-results/: .last-run.json
e2e/test-results/setup-InkForge-Main-Flow-C-3d3a7-p-wizard-and-publish-a-post-chromium/: error-context.md
e2e/tests/: setup.spec.ts
memories/: INTEGRATION_TEST_CHECKLIST.md  PACKAGE_VERSIONS.md  PROJECT_STATUS.md  README.md  RUNTIME_RULES.md  SKILL.md  architecture-audit-2026-04-10.md  architecture-decisions.md  cms-rebuild-plan.md  executable-roadmap.md  phase-task-checklist.md  refactor-todo.md  skill-sources-plan.md  v0.3-architecture-vision.md  v0.3-longterm-plan.md  v0.3-next-steps.md  v0.3-progress.md  v0.3-stage6-completion.md  v0.3-stage6-implementation.md  v0.3-stage6-ui-plan.md  v0.3-stage6a-theme-admin-plan.md  v0.3-stage6b-theme-runtime-plan.md  v0.3-stage7-theme-system-plan.md
migrations/: 001_init.sql  002_add_posts_fts5.sql  003_add_media_category.sql  004_add_backup_tables.sql  005_add_media_categories.sql  006_add_theme_config.sql  007_add_soft_delete_columns.sql  008_add_user_language.sql  009_add_content_type.sql  010_add_page_render_mode.sql  011_clear_default_site_url.sql  012_setup_state_and_admin_url.sql  013_setup_stage_model.sql
scripts/: convert-icons.js  pin_deps.js  svg-to-png.js
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs  tests.rs  ws.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs  window.rs
src/admin/: admin.html  mod.rs
src/admin/ui/: index.html  package-lock.json  package.json  vite.config.ts
src/bootstrap/: config.rs  mod.rs  router.rs
src/handlers/: auth.rs  category.rs  comment.rs  mod.rs  post.rs  setting.rs  tag.rs  theme.rs  upload.rs
src/infra/: mod.rs
src/infra/backup/: local.rs  mod.rs  s3.rs  traits.rs
src/infra/db/: pool.rs
src/infra/hash/: password.rs
src/infra/jwt/: token.rs
src/infra/plugin/: traits.rs
src/infra/storage/: local.rs  mod.rs  traits.rs
src/middleware/: auth.rs
src/models/: mod.rs
src/modules/: mod.rs
src/modules/auth/: domain.rs  dto.rs  handler.rs  repository.rs  service.rs
src/modules/backup/: domain.rs  dto.rs  handler.rs  merge.rs  mod.rs  repository.rs  scheduler.rs  service.rs
src/modules/category/: domain.rs  dto.rs  handler.rs  repository.rs  service.rs
src/modules/comment/: domain.rs  dto.rs  handler.rs  repository.rs  service.rs
src/modules/media/: category.rs  category_domain.rs  domain.rs  dto.rs  handler.rs  mod.rs  repository.rs  service.rs
src/modules/post/: domain.rs  dto.rs  handler.rs  mod.rs  repository.rs  service.rs
src/modules/seo/: meta.rs  mod.rs  robots.rs  sitemap.rs
src/modules/setting/: dto.rs  handler.rs  mod.rs  repository.rs  service.rs  validator.rs
src/modules/setup/: domain.rs  dto.rs  handler.rs  repository.rs  service.rs
src/modules/tag/: domain.rs  dto.rs  handler.rs  repository.rs  service.rs
src/modules/theme/: domain.rs  dto.rs  engine.rs  handler.rs  mod.rs  repository.rs  service.rs
src/modules/trash/: domain.rs  handler.rs  mod.rs  repository.rs  scheduler.rs  service.rs
src/modules/user/: domain.rs  dto.rs  handler.rs  mod.rs  repository.rs  service.rs  theme_handler.rs
src/shared/: auth.rs  error.rs  json.rs  mod.rs  pagination.rs  request_id.rs  response.rs  security.rs
src/tests/: auth_tests.rs  backup_tests.rs  post_tests.rs  setup_tests.rs
target-codexcheckMJCen6/: .rustc_info.json
target_tmp_verify/: .rustc_info.json
tests/: integration_test.rs
themes/default/: theme.toml
themes/default/templates/: index.html  login.html  (+3 more)
(+128 files in other folders)
