[package]
name = "inkforge"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "inkforge"
path = "src/main.rs"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["multipart", "macros", "ws"] }
futures-util = "0.3"
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "set-header", "compression-gzip"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# 模板引擎
minijinja = { version = "2", features = ["loader"] }

# 认证
jsonwebtoken = "9"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }

# 工具
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
config = "0.14"
once_cell = "1"
slug = "0.1"
pulldown-cmark = { version = "0.11", features = [] }
bytes = "1"
mime_guess = "2"
zip = "2"
sha2 = "0.10"
hex = "0.4"
tokio-cron-scheduler = "0.9"
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }

[features]
default = []
s3 = ["aws-config", "aws-sdk-s3"]
