[workspace]
members = [".", "src-tauri"]
resolver = "2"

[package]
name = "inkforge"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "inkforge"
path = "src/main.rs"

[dependencies]
# Web 框架
axum = { version = "=0.7.9", features = ["multipart", "macros", "ws"] }
futures-util = "=0.3.32"
axum-extra = { version = "=0.9.6", features = ["typed-header", "cookie"] }
tokio = { version = "=1.51.0", features = ["full"] }
tower = { version = "=0.4.13" }
tower-http = { version = "=0.5.2", features = ["cors", "fs", "trace", "set-header", "compression-gzip"] }

# 数据库
sqlx = { version = "=0.7.4", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }

# 序列化
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
toml = "=0.8.2"

# 模板引擎
minijinja = { version = "=2.19.0", features = ["loader"] }

# 认证
jsonwebtoken = "=9.3.1"
argon2 = "=0.5.3"
rand_core = { version = "=0.6.4", features = ["getrandom"] }

# 工具
uuid = { version = "=1.23.0", features = ["v4", "serde"] }
chrono = { version = "=0.4.44", features = ["serde"] }
anyhow = "=1.0.102"
thiserror = "=1.0.69"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "fmt"] }
config = "=0.14.1"
once_cell = "=1.21.4"
slug = "=0.1.6"
pulldown-cmark = { version = "=0.11.3", features = [] }
bytes = "=1.11.1"
mime_guess = "=2.0.5"
zip = "=2.4.2"
sha2 = "=0.10.9"
hex = "=0.4.3"
url = "=2.5.8"
ammonia = "=4.1.2"

tokio-cron-scheduler = "=0.9.4"
aws-config = { version = "=1.8.15", optional = true }
aws-sdk-s3 = { version = "=1.119.0", optional = true }

[features]
default = []
s3 = ["aws-config", "aws-sdk-s3"]


[profile.release]
lto = true              # Link-time optimization
opt-level = "s"         # 优化二进制大小
codegen-units = 1       # 单代码生成单元，更好的优化
strip = true            # 剥离符号（生产环境）

[profile.bench]
debug = true

[dev-dependencies]
reqwest = { version = "=0.12.28", features = ["json"] }
serial_test = "=3.4.0"
