[package]
name = "inkforge-desktop"
version = "0.3.0"
edition = "2021"

[lib]
name = "inkforge_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tracing = "0.1"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
