[package]
name = "inkforge-desktop"
version = "0.3.0"
edition = "2021"

[lib]
name = "inkforge_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
inkforge = { path = "../" }
tauri = { version = "=2.10.3", features = [] }
tauri-plugin-shell = "=2.3.5"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tokio = { version = "=1.51.0", features = ["full"] }
reqwest = { version = "=0.12.28", default-features = false, features = ["rustls-tls", "json"] }
tracing = "=0.1.44"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
